# kajamtag

./: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h  config.h.in  configure  configure.ac  configure.in  libkajamtag.pc.in  main.c
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
example/: Makefile  sample.c  testprogram.c
src/: Makefile.am  Makefile.in  id3.c  id3.h  kajamtag.c  kajamtag.h  kajamtagid3.c  kajamtagid3.h  kajamtagogg.c  kajamtagogg.h  kajamtagutility.c  kajamtagutility.h  ktag_flac.c  ktag_id3.c  ktag_id316.c  ktag_ogg.c  ktag_util.c  ktagid3.c  ktagogg.c  ktagutil.c  ogg.c  ogg.h
src/kajamtag/: kajamtag.h  ktag_constants.h  ktag_flac.h  ktag_id3.h  ktag_ogg.h  ktag_util.h  ktagid3.h  ktagogg.h
