AC_INIT(kajamtag, 0.2.6.1, jonescaseyb@gmail.com)
AM_INIT_AUTOMAKE(kajamtag, 0.2.6.1)
AC_CONFIG_HEADERS([config.h])
AC_PROG_LIBTOOL
AC_PROG_INSTALL
AC_CONFIG_MACRO_DIR([m4])
AC_PREFIX_DEFAULT(/usr)
LT_INIT

# Checks for programs.
AC_PROG_CC
AC_HEADER_STDC

# Checks for libraries.
# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([strchr strdup])

AC_CONFIG_FILES([Makefile bin/Makefile src/Makefile libkajamtag.pc])
AC_OUTPUT()

